src/app/components/contact-add-form/contact-add-form.scss
@use 'styles/variables' as *;
@use 'styles/mixins' as mixins;

.modal-title-area {
  background-color: $blue-darker;
  position: relative;

  p,
  h2 {
    color: $white;
  }
}

.logo {
  width: 60px;
  height: auto;
}

.contact-avatar {
  width: 7.5rem;
  height: 7.5rem;
  border-radius: 50%;
  color: #ffffff;
  background-color: $grey;
  font-weight: 700;
  font-size: 3rem;
  text-align: center;
  flex-shrink: 0;
  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.4);
}

@media (max-width: 992px) {
  .contact-avatar {
    position: absolute;
    top: -50px;
    right: 50%;
    transform: translateX(50%);
    width: 100px;
    height: 100px;
    border: 2px solid $white;
  }
}

